--- a/3dsurfaceplot/requirements.txt
+++ b/3dsurfaceplot/requirements.txt
@@ -1,3 +1,4 @@
+astroid==2.1.0
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
@@ -12,15 +13,20 @@ Flask-Compress==1.4.0
 gunicorn==19.9.0
 idna==2.8
 ipython-genutils==0.2.0
+isort==4.3.4
 itsdangerous==1.1.0
+jellyfish==0.5.6
 Jinja2==2.10
 jsonschema==2.6.0
 jupyter-core==4.4.0
+lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
+mccabe==0.6.1
 nbformat==4.4.0
 numpy==1.16.1
 pandas==0.24.1
 plotly==3.6.1
+pylint==2.2.2
 python-dateutil==2.8.0
 pytz==2018.9
 requests==2.21.0
@@ -28,4 +34,6 @@ retrying==1.3.3
 six==1.12.0
 traitlets==4.3.2
 urllib3==1.24.1
+us==1.0.0
 Werkzeug==0.14.1
+wrapt==1.11.1
