--- a/legend/requirements.txt
+++ b/legend/requirements.txt
@@ -1,8 +1,10 @@
+attrs==19.1.0
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
 dash==0.37.0
 dash-core-components==0.43.1
+dash-daq==0.1.4
 dash-html-components==0.13.5
 dash-renderer==0.18.0
 dash-table==3.4.0
@@ -21,6 +23,7 @@ nbformat==4.4.0
 numpy==1.16.1
 pandas==0.24.1
 plotly==3.6.1
+pyrsistent==0.14.11
 python-dateutil==2.8.0
 pytz==2018.9
 requests==2.21.0
