--- a/3dsurfaceplot/requirements.txt
+++ b/3dsurfaceplot/requirements.txt
@@ -1,12 +1,12 @@
-astroid==2.1.0
+astroid==2.2.5
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
-dash==0.37.0
-dash-core-components==0.43.1
-dash-html-components==0.13.5
-dash-renderer==0.18.0
-dash-table==3.4.0
+dash==0.40.0
+dash-core-components==0.45.0
+dash-html-components==0.15.0
+dash-renderer==0.21.0
+dash-table==3.6.0
 decorator==4.3.2
 Flask==1.0.2
 Flask-Compress==1.4.0
@@ -24,15 +24,16 @@ MarkupSafe==1.1.0
 mccabe==0.6.1
 nbformat==4.4.0
 numpy==1.16.1
-pandas==0.24.1
-plotly==3.6.1
-pylint==2.2.2
+pandas==0.24.2
+plotly==3.7.1
+pylint==2.3.1
 python-dateutil==2.8.0
 pytz==2018.9
 requests==2.21.0
 retrying==1.3.3
 six==1.12.0
 traitlets==4.3.2
+typed-ast==1.3.1
 urllib3==1.24.1
 us==1.0.0
 Werkzeug==0.14.1
