--- a/graphsizeplot/requirements.txt
+++ b/graphsizeplot/requirements.txt
@@ -1,11 +1,12 @@
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
-dash==0.37.0
-dash-core-components==0.43.1
-dash-html-components==0.13.5
-dash-renderer==0.18.0
-dash-table==3.4.0
+dash==0.40.0
+dash-core-components==0.45.0
+dash-daq==0.1.4
+dash-html-components==0.15.0
+dash-renderer==0.21.0
+dash-table==3.6.0
 decorator==4.3.2
 Flask==1.0.2
 Flask-Compress==1.4.0
@@ -19,8 +20,8 @@ jupyter-core==4.4.0
 MarkupSafe==1.1.0
 nbformat==4.4.0
 numpy==1.16.1
-pandas==0.24.1
-plotly==3.6.1
+pandas==0.24.2
+plotly==3.7.1
 python-dateutil==2.8.0
 pytz==2018.9
 requests==2.21.0
