--- a/plot_from_csv/requirements.txt
+++ b/plot_from_csv/requirements.txt
@@ -1,3 +1,4 @@
+attrs==19.1.0
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
@@ -20,7 +21,8 @@ MarkupSafe==1.1.0
 nbformat==4.4.0
 numpy==1.16.1
 pandas==0.24.1
-plotly==3.8.1
+plotly==3.9.0
+pyrsistent==0.15.1
 python-dateutil==2.8.0
 pytz==2018.9
 requests==2.21.0
